--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=poppins:wght@400;500;600&display=swap');
 
 :root{
-    --bg-color: #fbf8f8;
+    --bg-color: #f1f1f1;
     --text-color: #2b2862;
     --link-color: #606dfe;
     --transition: 0.4s;
@@ -20,10 +20,14 @@ ul{
 a{
     text-decoration: none;
 }
+a:hover{
+    border-bottom: 2px dotted var(--text-color);
+}
 
 body{
     font-family: 'poppins', sans-serif;
     color: var(--text-color);
+    background-color: var(--bg-color);
 }
 
 .header{
@@ -90,3 +94,32 @@ body{
     font-size: 64px;
 }
 
+.cards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding-bottom: 50px;
+}
+
+.cards div{
+    margin: 0 20px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+}
+
+.cards div h3{
+    margin-bottom: 20px;
+}
+
+.cards div p{
+    font-size: 15px;
+}
+
+.cards div.first h3{
+    margin-bottom: 40px;
+}
+
+.cards div.first a{
+    font-size: 14px;
+    color: var(--link-color);
+}
