--- a/style.css
+++ b/style.css
@@ -149,13 +149,84 @@ body{
         padding-right: 50px;
     }
 
-    @media (max-width:700px){
-        .showcase, .cards{
-            max-width: 500px;
-        }
-    
-        .cards{
-            grid-template-columns: 1fr;
-            gap: 40px;
-            text-align: center;
-        }
+}
+
+@media (max-width:700px){
+    .showcase, .cards{
+        max-width: 500px;
+    }
+
+    .cards{
+        grid-template-columns: 1fr;
+        gap: 40px;
+        text-align: center;
+    }
+}
+
+@media (max-width: 550px) {
+    .header{
+        justify-content: space-between;
+        padding: 30px 20px;
+    }
+    .header .navbar{
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(43, 40, 98, 0.8);
+        transition: var(--transition);
+    }
+
+    .header .navbar ul{
+        flex-direction: column;
+        margin-top: 30px;
+    }
+    .header .navbar ul li{
+        margin: 30px 0;
+    }
+    .header .navbar ul li a{
+        color: #fff;
+    }
+    .header .navbar ul .btn{
+        margin-left: 0;
+        background-color: transparent;
+        border:2px solid #ffffff;
+    }
+    .header .navbar ul .btn:hover{
+        background-color: #ffffff;
+        color: var(--text-color);
+    }
+    .header .menu-btn{
+        display: block;
+    }
+    .header .menu-btn .fa-times{
+        display: none;
+        position: absolute;
+        top: 30px;
+        font-size: 25px;
+        color: #fff;
+    }
+    .header .menu-btn i{
+        font-size: 24px;
+    }
+    .header .menu-btn i:hover{
+        cursor: pointer;
+    }
+    .showcase h1{
+        padding-right: 0;
+        text-align: center;
+        line-height: 1.3;
+    }
+    .showcase p{
+        padding: 30px 50px;
+        text-align: center;
+    }
+}
+
+@media (max-width: 400px){
+    .showcase h1{
+        font-size: 35px;
+    }
+}
